--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="redVidDiv">
           <div class="shadowLayer"></div>
           <!-- <img src="assets/images/protoImgs/redProt.png" alt=""> -->
-          <video class="redVid" src="assets/video/redPro.webm" autoplay muted loop poster="assets/images/protoImgs/redProt.png"></video>
+          <video class="redVid" src="assets/video/protoFixd.web" autoplay muted loop poster="assets/images/protoImgs/redProt.png"></video>
         </div>
 
         <div class="BeYouTyDiv">
