--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
 
         <div class="BeYouTyDiv">
           <div class="shadowLayer"></div>
-          <video class="beyoutyVid" src="" autoplay muted loop poster="assets/images/protoImgs/BeYouTy.png"></video>
+          <video class="beyoutyVid" src=""  muted loop poster="assets/images/protoImgs/BeYouTy.png"></video>
         </div>
 
         <div class="solidusDiv">
           <div class="shadowLayer"></div>
           <video src="" autoplay muted loop poster="assets/images/protoImgs/solid.png"></video>
         </div>
+      </div>
+      <div class="mobileExit">
+
       </div>
     </main>
 
