--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <div class="redVidDiv">
           <div class="shadowLayer"></div>
           <!-- <img src="assets/images/protoImgs/redProt.png" alt=""> -->
-          <video class="redVid" src="assets/video/protoFixd.web" autoplay muted loop poster="assets/images/protoImgs/redProt.png"></video>
+          <video class="redVid" src="" autoplay muted loop poster="assets/images/protoImgs/redProt.png"></video>
         </div>
 
         <div class="BeYouTyDiv">
           <div class="shadowLayer"></div>
-          <video class="beyoutyVid" src=""  muted loop poster="assets/images/protoImgs/BeYouTy.png"></video>
+          <video class="beyoutyVid" src="" autoplay  muted loop poster="assets/images/protoImgs/BeYouTy.png"></video>
         </div>
 
         <div class="solidusDiv">
